--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebasic",
+  "name": "bookingcare",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/haryphamdev/node-js-basic-hoidanit.git"
+    "url": "git+https://github.com/Nguyentunhat99/fullstack_bookingcare.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/haryphamdev/node-js-basic-hoidanit/issues"
+    "url": "https://github.com/Nguyentunhat99/fullstack_bookingcare/issues"
   },
-  "homepage": "https://github.com/haryphamdev/node-js-basic-hoidanit#readme",
+  "homepage": "https://github.com/Nguyentunhat99/fullstack_bookingcare#readme",
   "dependencies": {
     "app-root-path": "3.0.0",
     "body-parser": "1.19.0",
@@ -32,6 +32,8 @@
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   }
 }
