--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/Nguyentunhat99/NodeJS#readme",
   "dependencies": {
     "app-root-path": "3.0.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "3.1.6",
     "express": "4.17.1",
